--- a/Html_and_ CSS_Assignments/Project 1/style.css
+++ b/Html_and_ CSS_Assignments/Project 1/style.css
@@ -18,7 +18,7 @@ body {
   background-color: var(--darkPurple);
 }
 .container{
-  background-color: var(--white);
+  background-color: aquamarine;
 }
 .list {
   list-style: none;
