--- a/Html_and_ CSS_Assignments/Project 4/style.css
+++ b/Html_and_ CSS_Assignments/Project 4/style.css
@@ -5,10 +5,17 @@
     font-family: "Poppins",sans-serif;
 }
 body{
-    max-height: 100vh;
-    max-width: 100vw;
+    /*
+    padding-bottom: 20px; */
+    max-width: 1440px;
+    margin: 0 auto;
+    background-color: aqua;
+}
+.container{
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
     padding-left: 160px;
-    padding-bottom: 20px;
 }
 nav{
     max-height: 30%;
@@ -22,8 +29,10 @@ nav{
     
 }
 main{
-    max-height: 70%;
-    
+    /* max-height: 70%; */
+    display: flex;
+    flex-direction: row;
+    column-gap: 120px;
     
 }
 ul {
@@ -43,17 +52,12 @@ li:hover{
     color:#0d6332 ;
     
 }
-main{
-  display: flex;
-  flex-direction: row;
-  column-gap: 260px;
- 
-}
+
 main section:first-child{
     display: flex;
     flex-direction: column;
     row-gap: 20px;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
 }
 main section:nth-child(2){
@@ -64,18 +68,18 @@ main section:nth-child(2){
     justify-content: center;
 }
 main section:first-child h1{
-    font-size: 66px;
+    font-size: 52px;
     font-weight: 800;
 }
 main section:first-child p{
     font-size: 18px;
     font-weight: 200;
     color: rgb(8, 8, 8);
-    position: relative;
-    left: 40px;
 }
 button{
     background-color: #0d6332;
+    width: 200px;
+    height: 60px;
 
     color: white;
     padding: 10px 20px;
@@ -83,8 +87,7 @@ button{
     border-radius: 10px;
     font-size: 18px;
     font-weight: 400;
-    position: relative;
-    right: 160px;
+
     transition: all ease-in-out 1s;
 
 }
