--- a/Html_and_ CSS_Assignments/Project 6/style.css
+++ b/Html_and_ CSS_Assignments/Project 6/style.css
@@ -7,6 +7,7 @@
 }
 body{
     max-width: 1440px;
+    margin: 0 auto;
     background-color: #2B2923;
     color: rgb(230, 234, 238);
     font-family: 'Montserrat', sans-serif;
@@ -29,7 +30,7 @@ nav ul{
    display: flex;
    align-items: center;
    position: relative;
-   left: 360px;
+   left: 160px;
 
 }
 nav ul li{
@@ -60,7 +61,7 @@ main{
 .left{
     height:30% ;
     display: flex;
-    column-gap: 160px;
+    column-gap: 250px;
     justify-content: center;
     align-items: center;
    
@@ -72,14 +73,14 @@ main{
 .left p{
     font-size: 18px;
     line-height: 32px;
-    margin-left: 90px;
+    /* margin-left: 90px; */
 }
 .right{
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    left: 100px;
+    /* position: relative;
+    left: 100px; */
  
 }
 .right img{
