--- a/Practice Work/position/style.css
+++ b/Practice Work/position/style.css
@@ -1,14 +1,20 @@
+body{
+   /* display: flex;
+   flex-direction: row;
+   align-items: center;
+   height: 100vh; */
+}
 #box1{
-   position: relative;
+  position: relative;
  }
  #box2{
-    
+  
  }
  #box3{
-    position: absolute;
-    top: 200px;
-    left: 10px;
+  
  }
  #box4{
-    
+   position: absolute;
+   /* top: 20px;
+   left: 10px; */
  }
